--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -23,6 +23,12 @@
   entry: pre_commit_hooks/num-files-in-commit.sh
   language: script
 
+- id: send-telemetry
+  name: Send telemetry
+  description: Send usage telemetry to Google Analytics
+  entry: pre_commit_hooks/send-telemetry.sh
+  language: script
+
 - id: checkstyle
   name: Checkstyle
   description: Lint Java files with Checkstyle
