--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,7 @@
   name: Fetch Git notes
   description: Fetch the Git notes from the repo
   entry: pre_commit_hooks/fetch-notes.sh
+  pass_filenames: false
   language: script
 
 - id: commit-message-line-length
@@ -21,6 +22,7 @@
   name: Send telemetry
   description: Send usage telemetry to Google Analytics
   entry: pre_commit_hooks/send-telemetry.sh
+  pass_filenames: false
   language: script
 
 - id: shellcheck
@@ -134,21 +136,21 @@
   name: 'go fmt'
   entry: pre_commit_hooks/run-go-fmt.sh
   files: '\.go$'
-  language: 'script'
+  language: script
   description: "Runs `gofmt`, requires golang"
 
 - id: go-vet
   name: 'go vet'
   entry: pre_commit_hooks/run-go-vet.sh
   files: '\.go$'
-  language: 'script'
+  language: script
   description: "Runs `go vet`, requires golang"
 
 - id: go-lint
   name: 'go lint'
   entry: pre_commit_hooks/run-go-lint.sh
   files: '\.go$'
-  language: 'script'
+  language: script
   description: "Runs `golint`, requires https://github.com/golang/lint"
 
 - id: htmlhint
